--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -20,12 +20,12 @@
                 </script>
             </div>
             <div id="tr2">
-                <div style="height: 9.09%; width: 100%; ">
-                    <input style="height:100%;width: 100%; text-align: left; border-color: #B3B3B3" name="title"
+                <div style="height: 9.09%; width: 100%; margin-bottom: 2.604%;">
+                    <input style="height:100%;width: 100%; text-align: left; border-color: #B3B3B3;" name="title"
                            placeholder="제목을 입력하세요">
                 </div>
-                <div style="height: 58.7%; padding-top: 2.604%">
-                    <div contenteditable class="fake_textarea" style="height: 100%; width: 100%; text-align:left; border-color: #B3B3B3;" id="review_sentence"></div>
+                <div style="height: 58.7%; border:2px solid #B3B3B3;">
+                    <div contenteditable class="fake_textarea" style="height: 100%; width: 100%; text-align:left;" id="review_sentence"></div>
                     <input style="display:none;" name="review_sentence" id="review_sentence1">
                 </div>
                 <div style="padding-top: 3.038%">
