--- a/templates/normal_user_review_search.html
+++ b/templates/normal_user_review_search.html
@@ -88,7 +88,7 @@
                 </tr>
             {% endfor %}
         </tbody>
-    </table>d
+    </table>
     <br>
     {% if paged_review.has_previous %}
         <a id="prev_page">이전으로</a>
