--- a/static/css/normalUserReviewSearchTemplate.scss
+++ b/static/css/normalUserReviewSearchTemplate.scss
@@ -18,6 +18,20 @@
   height:72.57%;
   padding: 1.5625% 2.5%;
   text-align:center;
+  overflow-y:scroll;
+}
+#review_icon_selects::-webkit-scrollbar{
+  width:9px;
+}
+#review_icon_selects::-webkit-scrollbar-thumb{
+  width:3px;
+  background-color:#C6C6C6;
+  background-clip:padding-box;
+  border:3px solid transparent;
+  border-radius:12px;
+}
+#review_icon_selects::-webkit-scrollbar-track{
+  background-color:#FFFFFF;
 }
 div#review_icon_selects>label{
   position:relative;
@@ -97,4 +111,8 @@ div#written_date_selects_div{
   line-height:1;
   text-decoration:none;
   color:#A23355;
+}
+.icon {
+  width: 60.7%;
+  height: 100%;
 }
