--- a/static/css/normalUserReviewSearchTemplate.css
+++ b/static/css/normalUserReviewSearchTemplate.css
@@ -139,4 +139,8 @@ div#written_date_selects_div {
   height: 100%;
 }
 
+#reviews {
+  height: 89%;
+}
+
 /*# sourceMappingURL=normalUserReviewSearchTemplate.css.map */
