아이콘 관련 수정

--- a/templates/normal_user_review_search.html
+++ b/templates/normal_user_review_search.html
@@ -1,106 +1,136 @@
-{% extends 'normal_user_base.html' %}
+{% extends 'normal_user_review_list.html' %}
 {% load static %}
-
 {% block left_side_bar %}
-<div id="searchConditionForm">
-    <div style ="font-size : 40px; font-weight: bolder; text-align:left;">
-        <span><br>리뷰 검색 필터</span>
-    </div>
-    <form id="search_filter" action="{{normalUserReviewSearch}}" onsubmit="get_address()" method="get">
-        <fieldset id="icons">
-            <br>
-            <legend>포함된 아이콘</legend>
-            <input type="checkbox" id="parking_lot" name="icons" value="1">
-            <label class="checkbox-inline" for="parking_lot">주차장</label>
-            <input type="checkbox" id="elevator" name="icons" value="2">
-            <label class="checkbox-inline" for="elevator">엘리베이터</label>
-            <input type="checkbox" id="CCTV" name="icons" value="3">
-            <label class="checkbox-inline" for="CCTV">CCTV</label>
-        </fieldset>
-        <fieldset id="built_year">
-            <legend>원룸 건축 연도</legend>
-            <select id="builtFrom" name="builtFrom"></select>
-            <span> ~ </span>
-            <select id="builtTo" name="builtTo"></select>
-        </fieldset>
-        <label for="otherOptions">검색 텍스트</label>
-        <input class="col-10" name="otherOptions" id="otherOptions" type="text" placeholder="기타 검색 텍스트">
-        <input name="address" id="search_address" style="display:none;">
-        <a href="javascript:(0)" onclick="document.getElementById('search_filter').submit();" style="float:right; margin-top:10px; margin-right:25px;">적용</a>
-    </form>
-</div>
-{% endblock %}
-
-{% block main_contents %}
 <link rel="stylesheet" href="{% static 'css/normalUserReviewSearchTemplate.css' %}">
+<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" />
 
-<script  src="{% static 'js/normalUserReviewSearchTemplate.js' %}"></script>
-<div id="reviewSearchResult">
-    <form action="{{normalUserReviewSearch}}" method="get">
-        <fieldset>
-            <legend>건물 주소</legend>
-            <input type="text" name="address" id="address1">
-        </fieldset>
-    </form>
-    <br>
-    <table class="col-8">
-        <tbody>
-            <tr>
-                <th>
-                    대표 사진
-                </th>
-                <th class="text-center">
-                    작성자 / 이메일
-                </th>
-                <th class="text-center">
-                    리뷰 제목
-                </th>
-                <th class="text-center">
-                    <img src="{% static 'images/iconImage/recommend.png' %}" alt="추천"> / <img src="{% static 'images/iconImage/report.png' %}" alt="신고">
-                </th>
-            </tr>
-            {% for r in paged_review %}
-                <tr>
-                    <td rowspan="3" class="col-1">
-                        <img>
-                    </td>
-                    <td class="review_writer text-center col-2">
-                        <span>{{r.reviewWriter}} / {{r.uEmail}}</span>
-                    </td>
-                    <td class="review_title text-center col-3">
-                        <a class="link-secondary" href="{{normalUserReviewRead}}?id={{r.id}}">{{ r.reviewTitle }}</a>
-                    </td>
-                    <td class="col-2 text-center">
-                        {{r.recommendedOn|length}} / {{r.reportedOn|length}}
-                    </td>
-                </tr>
-                <tr>
-                    <th colspan="3" class="text-center">
-                        아이콘 목록
-                    </th>
-                </tr>
-                <tr>
-                    <td colspan="3" class="review_icon col-5">
-                        {% for icon in r.includedIcon %}
-                            <img src="{% static 'images/iconImage/' %}{{icon}}.png">
-                        {% endfor %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <br>
-    {% if paged_review.has_previous %}
-        <a id="prev_page">이전으로</a>
-        <script>
-            document.getElementById('prev_page').href='{{normalUserReviewSearch}}?'+current_URL+"&page={{paged_review.previous_page_number}}"
-        </script>
-    {% endif %}
-    {% if paged_review.has_next %}
-        <a id="next_page">다음으로</a>
-        <script>
-            document.getElementById('next_page').href='{{normalUserReviewSearch}}?'+current_URL+"&page={{paged_review.next_page_number}}"
-        </script>
-    {% endif %}
+    <div id='review_search_form' style="text-align:left; width:88.54%; height:66.16%;" >
+        <form id="search_filter" action="{{normalUserReviewSearch}}" method="get">
+            <div style="width:100%; height:6.11%;" id="review_search_filter">
+                <span style="display:block; line-height:1; font-weight: bolder;">리뷰 검색 필터 </span>
+            </div>
+            <script>
+                let a = (document.getElementById('review_search_filter').offsetHeight/16).toString()+'rem';
+                document.getElementById('review_search_filter').style.fontSize=a;
+            </script>
+            <div style="width:98.32%; height:21.37%;" id="review_icon_form">
+                <div id="review_icon_filter" style="width:100%; height:21.429%;">
+                    <span style="display:block; height:100%;line-height:1;">포함된 아이콘</span>
+                </div>
+                <script>
+                    a = (document.getElementById('review_icon_filter').offsetHeight/16).toString()+'rem';
+                    document.getElementById('review_icon_filter').style.fontSize=a;
+                </script>
+
+                <div id="review_icon_selects">
+                    <label><input type="checkbox" name="color" value="blue">
+                    <i  class="fa fa-home fa-fw"></i>
+                    </label>
+                    <label><input type="checkbox" name="color" value="red">
+                    <span class="sr-only"><i class="fa fa-spinner fa-spin fa-fw"></i></span>
+                    </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-camera-retro fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-spinner fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-refresh fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-refresh fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-refresh fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-refresh fa-fw"></i></span>
+                    </label>
+                    <label></label>
+                    <label></label>
+                    <label></label>
+                    <label></label>
+                </div>
+                <script>
+                    let b = Array.from(document.getElementById('review_icon_selects').children);
+                    b.forEach(function(o){
+                        a=(o.offsetHeight/16).toString()+'rem';
+                        o.style.fontSize=a;
+                    });
+                </script>
+            </div>
+            <div id="written_date_form">
+                <div id="written_date_filter">
+                    <span style="display:block; line-height:1;">리뷰 작성일</span>
+                </div>
+                <script>
+                    a=(document.getElementById('written_date_filter').offsetHeight/16).toString()+'rem';
+                    document.getElementById('written_date_filter').style.fontSize=a;
+                </script>
+                <div id="written_date_selects" >
+                    <div id="written_date_selects_div">
+                        <select id="writtenStart" name="writtenStart"></select>
+                            ~
+                        <select id="writtenEnd" name="writtenEnd"></select>
+                    </div>
+                    <script>
+                        a=((document.getElementById('writtenStart').offsetHeight-6)/16).toString()+'rem';
+                        document.getElementById('writtenStart').style.fontSize=a;
+                        b=((document.getElementById('writtenEnd').offsetHeight-6)/16).toString()+'rem';
+                        document.getElementById('writtenEnd').style.fontSize=b;
+                    </script>
+                </div>
+            </div>
+            <div id="text_form">
+                <div id="search_address" >검색할 주소</div>
+                <script>
+                    a=(document.getElementById('search_address').offsetHeight/16).toString()+'rem';
+                    document.getElementById('search_address').style.fontSize=a;
+                </script>
+                <div id="address_filter ">
+                    <input class="form-control" type="search" placeholder="주소 입력" aria-label="Search"
+                           id="address2" name="address" value="{{ address }}">
+                </div>
+            </div>
+            <div id="submit-div">
+                <a href="javascript:(0)" onclick="document.getElementById('search_filter').submit();" id="submit">적용</a>
+            </div>
+            <script>
+                a=(document.getElementById('submit-div').offsetHeight/16).toString()+'rem';
+                document.getElementById('submit').style.fontSize=a;
+            </script>
+        </form>
+    </div>
+{% endblock %}
+{% block info %}
+<div style ="border-bottom: solid 2px #B3B3B3 ; width:100%; height:10.6% ;padding:3.47% 8.854% 0.5% 6.07%;">
+	    <input type="search"style="  border-radius: 5px; width: 60.7%; height:100%;" placeholder="검색어 입력">
+	    <span type ="icon" class ="icon"><i class="fa fa-search"></i></span>
+
+    <div style="word-spacing:15px; float:right; ">
+        <div style="display: inline-block;">
+            <select id="sort_select_box" name="sort_select_box">
+                <option value=''>-- 선택 --</option>
+                <option value="1" {% if sorted == '1' %}selected{% endif %}>최신 순</option>
+                <option value="2" {% if sorted == '2' %}selected{% endif %}>추천 순</option>
+                <option value="3" {% if sorted == '3' %}selected{% endif %}>정확도 순</option>
+            </select>
+        </div>
+    </div>
 </div>
+    <script>
+    $("select[name=sort_select_box]").change(function(){
+        const currentUrl = location.pathname
+
+        console.log(currentUrl)
+        console.log($(this).val()); //value값 가져오기 => (1,2,3)
+        console.log($("select[name=sort_select_box] option:selected").text()); //text값 가져오기 => (최신순, 추천순, )
+
+        var sorted_value = $(this).val()
+        const urlSearch = new URLSearchParams(location.search);
+        urlSearch.set('sorted', sorted_value)
+        window.open(location.pathname + '?' + urlSearch, '_self');
+    });
+    </script>
 {% endblock %}
