--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -94,17 +94,14 @@
         </div>
         <div id="icon">
             <h1>아이콘</h1>
-{#            {% for i in icons %}#}
-{#                <a onclick="selectIcon(this)">#}
-{#                    <img src="{% static i.iconKind %}">#}
-{#                    <input type="text" hidden value="{{ i.iconInformation }}">#}
-{#                    <input type="text" hidden value="{% static i.iconKind %}">#}
-{#                    <input type="text" hidden value="{% static i.changedIconKind %}">#}
-{#                </a>#}
-{#            {% endfor %}#}
-            {% if review.includedIcon %}
-                {% for icon in review.includedIcon %}
-                    <img src="{% static 'images/iconImage/' %}{{ icon }}" onclick="selectIcon2(this)">
+            {% if icons %}
+                {% for i in icons %}
+                    <a onclick="selectIcon(this)">
+                        <img src="{% static i.iconKind %}">
+                        <input type="text" hidden value="{{ i.iconInformation }}">
+                        <input type="text" hidden value="{% static i.iconKind %}">
+                        <input type="text" hidden value="{% static i.changedIconKind %}">
+                    </a>
                 {% endfor %}
             {% else %}
                 <div>아이콘이 없습니다.</div>
